--- a/package.json
+++ b/package.json
@@ -10,23 +10,24 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.0.0",
-    "sharp": "^0.33.0",
-    "ws": "^8.14.2",
-    "chokidar": "^3.5.3",
-    "jsonwebtoken": "^9.0.2",
-    "@astrojs/mdx": "^4.0.0",
-    "@astrojs/sitemap": "^3.2.0",
     "@astrojs/check": "^0.9.0",
+    "@astrojs/mdx": "^4.0.0",
     "@astrojs/react": "^4.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "@astrojs/sitemap": "^3.2.0",
+    "@lucide/astro": "^0.562.0",
+    "@tailwindcss/vite": "^4.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "astro": "^5.0.0",
+    "chokidar": "^3.5.3",
+    "jsonwebtoken": "^9.0.2",
     "motion": "^12.0.0",
-    "typescript": "^5.0.0",
-    "@tailwindcss/vite": "^4.0.0",
+    "node-pty": "^1.1.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "sharp": "^0.33.0",
     "tailwindcss": "^4.0.0",
-    "@lucide/astro": "^0.562.0"
+    "typescript": "^5.0.0",
+    "ws": "^8.14.2"
   }
 }
